Bug 1714421 - Move the assertion of timeline after checking mReplacedTransition. r=hiro

We support the setter of Animation.timeline, so it's possible to have a
null |mTimeline| when calculating the start value for off-main-thread
animations. If it's null, it must be different from the document
timeline, so in this case we don't set |mReplacedTransition|.
So let's move the assertion below the if-check of |mReplacedTransition|.

Differential Revision: https://phabricator.services.mozilla.com/D121675