dom/animation/CSSTransition.cpp
@@ -281,13 +281,19 @@ void CSSTransition::UpdateStartValueFromReplacedTransition() {
                      nsCSSPropertyIDSet::CompositorAnimatables()),
              "Should be called for compositor-runnable transitions");
 
-  MOZ_ASSERT(mTimeline,
-             "Should have a timeline if we are replacing transition start "
-             "values");
-
   if (!mReplacedTransition) {
     return;
   }
+
+  // We don't set |mReplacedTransition| if the timeline of this transition is
+  // different from the document timeline. The timeline of Animation may be
+  // null via script, so if it's null, it must be different from the document
+  // timeline (because document timeline is readonly so we cannot change it by
+  // script). Therefore, we check this assertion if mReplacedTransition is
+  // valid.
+  MOZ_ASSERT(mTimeline,
+             "Should have a timeline if we are replacing transition start "
+             "values");
 
   ComputedTiming computedTiming = AnimationEffect::GetComputedTimingAt(
       CSSTransition::GetCurrentTimeAt(*mTimeline, TimeStamp::Now(),
